--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.7",
     "angular": "^1.6.6",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1"
